--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,13 @@
-server:
-  port: 80
-  context-path: /
-  
-
 spring:
-   datasource:
-      driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/db_jxc
-      username: root
-      password: root
-   jpa:
-     hibernate.ddl-auto: update
-     show-sql: true
-   thymeleaf:
-    cache: false
+  #开发模式
+  profiles:
+    active: dev
+  http:
+    encoding:
+      charset: UTF-8
+      enabled: true
+    multipart:
+    max-file-size: 10MB
+    max-request-size: 10MB
+  resources:
+    static-locations: classpath:/templates/
